Feat: Toma ya cambie el color de las cartas y ademas empece a entender el tema del condicional en una linea en vez de IF, he dicho empece, no que lo comprenda del todo je je

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
 body {
   background-color: green;
 }
+
+.texto-muy-grande {
+  font-size: 7rem !important;
+}
+.texto-mediano {
+  font-size: 3rem !important;
+}
